--- a/src/Middleware/Diagnostics/src/Resources.resx
+++ b/src/Middleware/Diagnostics/src/Resources.resx
@@ -144,7 +144,7 @@
     <value>No header data.</value>
   </data>
   <data name="ErrorPageHtml_NoQueryStringData" xml:space="preserve">
-    <value>No QueryString data.</value>
+    <value>No query string data.</value>
   </data>
   <data name="ErrorPageHtml_QueryButton" xml:space="preserve">
     <value>Query</value>
@@ -249,5 +249,32 @@
   </data>
   <data name="ExceptionHandlerOptions_NotConfiguredCorrectly" xml:space="preserve">
     <value>An error occurred when configuring the exception handler middleware. Either the 'ExceptionHandlingPath' or the 'ExceptionHandler' option must be set in 'UseExceptionHandler()'.</value>
+  </data>
+  <data name="ErrorPageHtml_NoRouteValues" xml:space="preserve">
+    <value>No route values.</value>
+  </data>
+  <data name="ErrorPageHtml_RoutingButton" xml:space="preserve">
+    <value>Routing</value>
+  </data>
+  <data name="ErrorPageHtml_Endpoint" xml:space="preserve">
+    <value>Endpoint</value>
+  </data>
+  <data name="ErrorPageHtml_EndpointDisplayName" xml:space="preserve">
+    <value>Display name</value>
+  </data>
+  <data name="ErrorPageHtml_EndpointOrder" xml:space="preserve">
+    <value>Order</value>
+  </data>
+  <data name="ErrorPageHtml_EndpointRouteName" xml:space="preserve">
+    <value>Route name</value>
+  </data>
+  <data name="ErrorPageHtml_EndpointRoutePattern" xml:space="preserve">
+    <value>Route pattern</value>
+  </data>
+  <data name="ErrorPageHtml_NoEndpoint" xml:space="preserve">
+    <value>No endpoint.</value>
+  </data>
+  <data name="ErrorPageHtml_RouteValues" xml:space="preserve">
+    <value>Route values</value>
   </data>
 </root>
